--- a/src/Client/FabledPokemon.fsproj
+++ b/src/Client/FabledPokemon.fsproj
@@ -3,8 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="../Server/Interface.fs" />
     <Compile Include="PokemonLoader.fs" />
+    <Compile Include="LoginForm.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
