--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "webpack -p",
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "webpack -p --config src/Tests/webpack.config.js && qunit tests/bundle.js",
+    "start-test": "webpack-dev-server --config src/Tests/webpack.config.js"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
@@ -11,6 +12,7 @@
     "babel-preset-env": "1.6.1",
     "fable-loader": "1.1.6",
     "fable-utils": "1.0.6",
+    "qunit": "^2.5.0",
     "remotedev": "^0.2.4",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4"
